--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
+    <h2>Welcome, {{userName}}!</h2>
   </div>
 </div>
 
@@ -24,17 +24,17 @@
     </form>
   </div>
 
-  {{#if pos.length}}
-  <div class="col-md-6 post-list">
-    <h3>Current Projects:</h3>
+  {{#if posts.length}}
+  <div class="col-md-6 ">
+    <h3>Current Posts:</h3>
 
     {{#each posts as |post|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
+        <h4><a href="/post/{{post.id}}">{{post.postTitle}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger post-list" data-id="{{post.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
